# weave-openhands

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: provider_cost_agent.py  rich_agent.py
src/weave_openhands/: __init__.py  config.py  instrumentation.py  serialization.py
tests/: conftest.py  test_api.py  test_integration.py  test_safety.py  test_serialization.py  test_usage.py
