[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "weave-openhands"
version = "0.1.0"
description = "W&B Weave tracing for the OpenHands Software Agent SDK"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "Apache-2.0"
authors = [{ name = "Morgan McGuire" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "fastapi>=0.116,<1",
  "openhands-sdk>=1.36.1,<2",
  "weave>=0.53.1,<0.54",
]

[project.urls]
Homepage = "https://github.com/morganmcg1/weave-openhands"
Repository = "https://github.com/morganmcg1/weave-openhands"
Issues = "https://github.com/morganmcg1/weave-openhands/issues"

[dependency-groups]
dev = [
  "build>=1.3",
  "pyright>=1.1.403",
  "pytest>=8.4",
  "pytest-asyncio>=1.1",
  "ruff>=0.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/weave_openhands"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src"]
